fix blur z-index

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,6 +29,7 @@ a{
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 5555;
 }
 /* wrapper */
 .wrapper{
